# grocery-list

./: .gitignore
backend/: __init__.py  app.js  commands.txt  config.py  items.js  pyproject.toml
backend/database/: schema.sql  utils.py
backend/db/: create.js  initialize.js  items.db
backend/routes/: items.js  main.py
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/components/: AddItemForm.jsx  FilterItemForm.jsx  GroceryItem.jsx  GroceryList.jsx
frontend/src/services/: localStorage.js
js_backend/: package.json  server.js
js_backend/db/: initialize.js
js_backend/routes/: items.js
