[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Python backend for the grocery list app"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.2"
flask-cors = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
